--- a/sites/all/modules/custom/newsmanager/translations/de.po
+++ b/sites/all/modules/custom/newsmanager/translations/de.po
@@ -1,7 +1,5 @@
-# $Id$
-#
-# German translation of Drupal (general)
-# Copyright YEAR NAME <EMAIL@ADDRESS>
+# German translation of Newsmanager
+# Copyright 2013 Sven Indelicato <sindelicato@redmouse.ch>
 # Generated from files:
 #  newsmanager.admin.inc: n/a
 #  newsmanager.views.inc: n/a
@@ -11,16 +9,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2013-05-13 10:36+0200\n"
-"PO-Revision-Date: 2013-05-13 10:38+0100\n"
-"Last-Translator: Sven Indelicato <sindelicato@redmouse.ch>\n"
-"Language-Team: German <EMAIL@ADDRESS>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 1.5.4\n"
+"Project-Id-Version: PROJECT VERSION"
+"POT-Creation-Date: 2013-05-13 10:36+0200"
+"PO-Revision-Date: 2013-05-13 10:38+0100"
+"Last-Translator: Sven Indelicato <sindelicato@redmouse.ch>"
+"Language-Team: German <sindelicato@redmouse.ch>"
+"MIME-Version: 1.0"
+"Content-Type: text/plain; charset=utf-8"
+"Content-Transfer-Encoding: 8bit"
+"Plural-Forms: nplurals=2; plural=(n!=1);"
+"X-Generator: Poedit 1.5.4"
 
 #: newsmanager.admin.inc:21
 msgid "General settings"
